--- a/roles/jboss-data-virt/tasks/jboss_service.yml
+++ b/roles/jboss-data-virt/tasks/jboss_service.yml
@@ -4,6 +4,14 @@
 # https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/6.4/html/Installation_Guide/sect-Service_Configuration.html#Install_JBoss_Enterprise_Application_Platform_6_Red_Hat_Enterprise_Linux_Service
 # https://access.redhat.com/documentation/en/red-hat-jboss-enterprise-application-platform/7.0.beta/installation-guide/chapter-4-configuring-jboss-eap-to-run-as-a-service
 ##
+- name: Create JBoss EAP Group
+  group:
+    name: "{{ jboss_eap_group }}"
+    system: yes
+    state: present
+    gid: "400"
+  tags:
+    - jboss_eap
 
 
 - name: Create JBoss EAP User
